--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.maatanyy.janggon.hanra">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
+
+    <permission android:name="org.maatanyy.janggon.hanra.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature"/>
+
+    <uses-permission android:name="org.maatanyy.janggon.hanra.permission.MAPS_RECEIVE"/>
+
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <uses-feature android:glEsVersion="0x00020000"
+        android:required="true"/>
+
+
 
     <application
         android:allowBackup="true"
@@ -9,9 +27,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.HanRa">
-        <activity android:name=".CourseActivity"></activity>
+        android:theme="@style/Theme.HanRa"
+        android:usesCleartextTraffic="true">
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDjglyzbLBWyIsL9fdc3gvzK5m5GtfG0xw"/>
+
+
+
+
+        <activity android:name=".ResolveActivity"></activity>
+        <activity android:name=".CourseActivity" />
         <activity android:name=".MapActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
