--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,23 +3,22 @@
     package="org.maatanyy.janggon.hanra">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
+    <permission
+        android:name="org.maatanyy.janggon.hanra.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
 
-    <permission android:name="org.maatanyy.janggon.hanra.permission.MAPS_RECEIVE"
-        android:protectionLevel="signature"/>
-
-    <uses-permission android:name="org.maatanyy.janggon.hanra.permission.MAPS_RECEIVE"/>
-
-    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-
+    <uses-permission android:name="org.maatanyy.janggon.hanra.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
-    <uses-feature android:glEsVersion="0x00020000"
-        android:required="true"/>
+    
 
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -29,15 +28,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HanRa"
         android:usesCleartextTraffic="true">
+        <activity android:name=".HelpActivity"></activity>
+        <activity android:name=".WeatherActivity" />
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDjglyzbLBWyIsL9fdc3gvzK5m5GtfG0xw"/>
+            android:value="AIzaSyDjglyzbLBWyIsL9fdc3gvzK5m5GtfG0xw" />
 
-
-
-
-        <activity android:name=".ResolveActivity"></activity>
+        <activity android:name=".ResolveActivity" />
         <activity android:name=".CourseActivity" />
         <activity android:name=".MapActivity" />
         <activity android:name=".MainActivity">
