--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
     implementation 'com.github.pedroSG94:AutoPermissions:1.0.3'
 
     implementation 'com.android.volley:volley:1.1.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.8.0'   // 기상청 api 관련
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.0'   //기상청 api 관련
 }
